--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -15,6 +15,13 @@
   #header a {
     text-decoration: none;
     color: black;
+    font-size: 1.125rem;
+  }
+
+  @media screen and (min-width: 1280px) {
+    #header a {
+      font-size: 1.2rem;
+    }
   }
   
   #header a:hover {
