Resolve astro check failure

--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -65,7 +65,7 @@ const structuredData = {
     <meta property="article:author" content="Christopher Carroll Smith" />
 
     <!-- Schema.org structured data -->
-    <script type="application/ld+json" set:html={JSON.stringify(structuredData)} />
+    <script is:inline type="application/ld+json" set:html={JSON.stringify(structuredData)} />
   </Fragment>
 
   <div class="App">
