--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -55,7 +55,8 @@ const postsWithAspectRatio = sortedBlogData.map(post => {
         const thumbnailPosition = index % 2 === 0 ? 'right' : 'left';
 
         return (
-          <article key={post.id} id={String(post.id)} class={`blog-post-summary ${isWideBanner ? 'blog-post-banner' : ''} ${hasThumbnail ? `thumbnail-${thumbnailPosition}` : ''}`}>
+          // eslint-disable-next-line react/jsx-key
+          <article id={String(post.id)} class={`blog-post-summary ${isWideBanner ? 'blog-post-banner' : ''} ${hasThumbnail ? `thumbnail-${thumbnailPosition}` : ''}`}>
             {hasImage && isWideBanner && (
               <a href={`/blog/${post.id}`} class="blog-banner-link">
                 <img
