Dark overlay on home is now ~half-height

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,7 +1,6 @@
 #down-arrow {
-    position: absolute;
-    bottom: 4rem;
-    left: 50%;
+    position: relative;
+    z-index: 1;
 }
 
 .clickable-icon {
