--- a/src/components/About.css
+++ b/src/components/About.css
@@ -15,15 +15,11 @@
 }
 
 .bio-animated {
-    position: relative;
-    min-height: 5rem;
+    display: grid;
 }
 
 .bio-sentence {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
+    grid-area: 1 / 1;
     opacity: 0;
     visibility: hidden;
 }
@@ -71,10 +67,9 @@
 
 @media (prefers-reduced-motion: reduce) {
     .bio-animated {
-        min-height: auto;
+        display: block;
     }
     .bio-sentence {
-        position: static;
         display: block;
         opacity: 1;
         visibility: visible;
